# Texttosql-chatbot

TextToSQL_updated/: .dockerignore  .gitignore  Dockerfile  ER_DIAGRAM.md  README.md  Sicilian Games - 2025 General Rules V1.xlsx  docker-compose.yml  list_tables.py  main.py  pyproject.toml  requirements.txt  run_api.py  test_multi_user.sh  verify_llm_setup.py
TextToSQL_updated/Data/: Basketball_Schedule.csv  Box Cricket_Schedule.csv  Box Cricket_team_Data.csv  Football_Schedules.csv  Football_team_Data.csv  Volleyball_Schedule.csv  Volleyball_team_Data.csv
TextToSQL_updated/Diagram/: system_architecture.md
TextToSQL_updated/src/: schema.txt  sicilian_games_cache.html
TextToSQL_updated/src/agents/: __init__.py  graph_builder.py  nodes.py
TextToSQL_updated/src/api/: dependencies.py  endpoints.py
TextToSQL_updated/src/config/: settings.py
TextToSQL_updated/src/core/: __init__.py  conversation.py  database.py  dependencies.py  llm.py
TextToSQL_updated/src/prompts/: system_prompts.py
TextToSQL_updated/src/queue/: tasks.py  worker.py
TextToSQL_updated/src/tools/: __init__.py  toolkit.py
TextToSQL_updated/src/utils/: __init__.py
TextToSQL_updated/tests/: test_api_conversation.py  test_config.py  test_conversation_memory.py  test_latency_check.py  test_multi_user.py  test_whatsapp.py
